# MPI-app

./: CMakeLists.txt  windowsRun.ps1
modules/: FindMsMpi.cmake
src/: main.cpp  matrix.h  mpihelper.h
